--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ford Mustang</title>
     <link rel="stylesheet" href="indexStyle.css">
     <script src="script.js"></script>
+    <link rel="icon" href="horse.png">
 </head>
 <body onload="loadSite()"> 
     <div class="loading" id="loading">
